USB Mass Storage successfully mounting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
+# CMakeLists for UniClock
 cmake_minimum_required(VERSION 3.12)
 
-# Change your executable name to something creative!
-set(NAME pico-boilerplate) # <-- Name your project/executable here!
+# Set the project name
+set(NAME uniclock)
 
+# Configure some hardware specific bits
+set(PICO_BOARD pico_w)
 include(pimoroni_pico_import.cmake)
 include(pico_sdk_import.cmake)
 
-# Gooey boilerplate
+# Configure language requirements
 project(${NAME} C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
@@ -14,23 +17,27 @@ set(CMAKE_CXX_STANDARD 17)
 # Initialize the SDK
 pico_sdk_init()
 
-# Add your source files
+# Define all the source files that go into this
 add_executable(${NAME}
-    main.cpp # <-- Add source files here!
+    uniclock.cpp
 )
 
-# Include required libraries
+# Include required library definitions
 # This assumes `pimoroni-pico` is stored alongside your project
-include(common/pimoroni_i2c)
-include(common/pimoroni_bus)
-include(libraries/bitmap_fonts/bitmap_fonts)
-include(libraries/hershey_fonts/hershey_fonts)
-include(libraries/pico_explorer/pico_explorer)
+include(libraries/pico_graphics/pico_graphics)
+include(libraries/galactic_unicorn/galactic_unicorn)
+include(usbfs/CMakeLists.txt)
 
-# Don't forget to link the libraries you need!
+# Make sure we can pick up local headers from sub-projects
+target_include_directories(${NAME} PRIVATE 
+    ${CMAKE_CURRENT_LIST_DIR}
+)
+
+# Define the libraries we need to link in.
 target_link_libraries(${NAME}
-    pimoroni_i2c
-    pico_explorer # <-- List libraries here!
+    pico_stdlib pico_cyw43_arch_lwip_threadsafe_background
+    hardware_rtc
+    pico_graphics galactic_unicorn usbfs
 )
 
 # create map/bin/hex file etc.
